# Simple_BMS_C-

./: CMakeLists.txt  README.md
Data/: Curr_Volt_Temp_Data.csv  Output_log.csv
src/: BMS.cpp  Helper_fn.cpp  Helper_fn.h  cell_param.cpp  cell_param.h  module.cpp  module.h
